2008-02-18  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DataViews/PersonView.py
	* src/ViewManager.py
	* src/GrampsCfg.py
	* src/plugins/WriteCD.py
	* src/plugins/FindDupes.py
	* src/Merge/_MergePerson.py
	* src/DbManager.py
	* src/ArgHandler.py
	* src/docgen/HtmlDoc.py
	* src/DbLoader.py
	use from QuestionDialog import ErrorDialog etc to bring in line with
	rest of gramps
	* src/Editors/_EditPrimary.py: EditPrimary._uses_duplicate_id() check
	for duplicates and give error dialog if id is already used. #0001347
	* src/Editors/_EditFamily.py: EditFamily.__do_save(), add call to 
	_uses_duplicate_id(). #0001347 

2008-02-17  Peter Landgren <peter.talken@telia.com>
	* src/plugins/StatisticsChart.py:
	0001756: Very strange results with statistics report.
	0001760: Pie charts are clipped if paper in landscape mode.

2008-02-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py (Date.__sub__): fixed some date math (#1649)
	* src/gen/lib/test/date_test.py: added some unit tests for date math

2008-02-15 Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/RelationView.py:
	* src/Editors/_EditFamily.py: prevent right mouse button causing crash.
	Bug #1729

2008-02-15 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_SourceEmbedList.py:
	* src/DisplayTabs/_PersonRefEmbedList.py:
	* src/DisplayTabs/_RepoEmbedList.py:
	* src/DisplayTabs/__init__.py:
	* src/DisplayTabs/_AddrEmbedList.py:
	* src/DisplayTabs/_WebEmbedList.py:
	* src/DisplayTabs/_NameEmbedList.py:
	* src/DisplayTabs/_EventEmbedList.py:
	* src/DisplayTabs/_EmbeddedList.py:
	* src/DisplayTabs/_GalleryTab.py:
	* src/DisplayTabs/_BackRefList.py:
	* src/DisplayTabs/_NoteTab.py:
	* src/DisplayTabs/_LocationEmbedList.py:
	* src/DisplayTabs/_ButtonTab.py:
	* src/DisplayTabs/_DataEmbedList.py:
	* src/DisplayTabs/_AttrEmbedList.py:
	* src/DisplayTabs/_LdsEmbedList.py:
	* src/DisplayTabs/_GrampsTab.py:
	* src/Editors/_EditPrimary.py:
	* src/Editors/_EditPlace.py: